<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/udpatelayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" xmlns:app="http://schemas.android.com/apk/res/com.zlab.audiobooks">

    <Button
        android:id="@+id/UpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="updateClickHandler"
        android:text="@string/update_button"
        android:textColor="#000"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:shadowColor="#000"
        android:text="@string/hello"
        android:textColor="#000"
        android:textSize="32dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:shadowColor="#000"
        android:text="@string/first_run_need_update"
        android:textColor="#000"
        android:typeface="serif" />

</RelativeLayout>